fix: spacing style alert

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -297,8 +297,16 @@
   /* ── Containers ── */
 
   .prose .alert {
-    @apply text-sm/6 px-4 py-2 my-4 rounded-md
+    @apply text-sm/6 p-4 my-4 rounded-md
            text-ui-content-toned;
+
+    & > *:first-child {
+      @apply mt-0!;
+    }
+
+    & > *:last-child {
+      @apply mb-0!;
+    }
   }
 
   .prose .alert .alert-title {
@@ -307,10 +315,6 @@
 
   .prose .alert p {
     @apply my-2;
-
-    &:first-child {
-      @apply m-0;
-    }
   }
 
   .prose .alert div[class*='language-'] {
